<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="@string/pref_country_code_key"
        android:title="@string/pref_country_code_title"
        android:defaultValue="@string/pref_country_code_default"
        android:selectAllOnFocus="true"
        android:inputType="textCapCharacters"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />
    <CheckBoxPreference
        android:key="@string/pref_show_notification_key"
        android:title="@string/pref_show_notification_title"
        android:defaultValue="true"/>

</PreferenceScreen>
